codegen/tests/ui/return-not-result.stderr
error: shuttle_service::main functions need to return a first class service or 'Result<impl Service, shuttle_service::Error>

         = help: See the docs for services with first class support
         = note: https://docs.rs/shuttle-service/latest/shuttle_service/attr.main.html#shuttle-supported-services

 --> tests/ui/return-not-result.rs:2:33
  |
2 | async fn return_not_result() -> bool {}
  |                                 ^^^^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/return-not-result.rs:2:40
  |
2 | async fn return_not_result() -> bool {}
  |                                        ^ consider adding a `main` function to `$DIR/tests/ui/return-not-result.rs`
