codegen/tests/ui/return-not-result.rs
#[shuttle_codegen::main]
async fn return_not_result() -> bool {}
